Wagon: Deploying site to repository

--- a/changelog.html
+++ b/changelog.html
@@ -190,12 +190,28 @@
 <p>Total number of changed sets: 1</p>
 <div class="section">
 <h3>Changes between 2013-10-16 and 2013-11-16<a name="Changes_between_2013-10-16_and_2013-11-16"></a></h3>
-<p>Total commits: 15<br />Total number of files changed: 54</p>
+<p>Total commits: 19<br />Total number of files changed: 57</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Timestamp</th>
 <th>Author</th>
 <th>Details</th></tr>
+<tr class="b">
+<td>2013-11-15 21:25:53</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannel.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java?rev=8d3318759d5ea4730245026dfa201ea09ea0e7d2&amp;content-type=text/vnd.viewcvs-markup">v 8d3318759d5ea4730245026dfa201ea09ea0e7d2</a><br /><br />Use implementationfrom shrink wrap.</td></tr>
+<tr class="a">
+<td>2013-11-15 21:25:53</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannel.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java?rev=6481727a7de10d742fb956da1508c5b8cd6afd64&amp;content-type=text/vnd.viewcvs-markup">v 6481727a7de10d742fb956da1508c5b8cd6afd64</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannelTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannelTest.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannelTest.java?rev=6481727a7de10d742fb956da1508c5b8cd6afd64&amp;content-type=text/vnd.viewcvs-markup">v 6481727a7de10d742fb956da1508c5b8cd6afd64</a><br /><br />Use implementationfrom shrink wrap.</td></tr>
+<tr class="b">
+<td>2013-11-15 20:22:10</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystem.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystem.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystem.java?rev=903f0ad738d0e591b51cf65c9e4234997132447c&amp;content-type=text/vnd.viewcvs-markup">v 903f0ad738d0e591b51cf65c9e4234997132447c</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsObject.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsObject.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsObject.java?rev=903f0ad738d0e591b51cf65c9e4234997132447c&amp;content-type=text/vnd.viewcvs-markup">v 903f0ad738d0e591b51cf65c9e4234997132447c</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPath.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPath.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPath.java?rev=903f0ad738d0e591b51cf65c9e4234997132447c&amp;content-type=text/vnd.viewcvs-markup">v 903f0ad738d0e591b51cf65c9e4234997132447c</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPathUtil.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathUtil.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPathUtil.java?rev=903f0ad738d0e591b51cf65c9e4234997132447c&amp;content-type=text/vnd.viewcvs-markup">v 903f0ad738d0e591b51cf65c9e4234997132447c</a><br /><br />Factored out path util methods.</td></tr>
+<tr class="a">
+<td>2013-11-15 20:06:24</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProvider.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProvider.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProvider.java?rev=beb7c73bf4dd4814d06f5c00c0f81070f183bd5e&amp;content-type=text/vnd.viewcvs-markup">v beb7c73bf4dd4814d06f5c00c0f81070f183bd5e</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProviderTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProviderTest.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProviderTest.java?rev=beb7c73bf4dd4814d06f5c00c0f81070f183bd5e&amp;content-type=text/vnd.viewcvs-markup">v beb7c73bf4dd4814d06f5c00c0f81070f183bd5e</a><br /><br />More tests for provider.</td></tr>
 <tr class="b">
 <td>2013-11-15 19:47:52</td>
 <td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
