--- a/file-activity.html
+++ b/file-activity.html
@@ -189,11 +189,23 @@
 <h2>File Activity Report<a name="File_Activity_Report"></a></h2>
 <div class="section">
 <h3>Changes between 2013-10-16 and 2013-11-16<a name="Changes_between_2013-10-16_and_2013-11-16"></a></h3>
-<p>Total commits: 15<br />Total number of files changed: 54</p>
+<p>Total commits: 19<br />Total number of files changed: 57</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Filename</th>
 <th>Number of Times Changed</th></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannel.java</b></a> </td>
+<td>4</td></tr>
+<tr class="a">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPath.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPath.java</b></a> </td>
+<td>4</td></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProvider.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProvider.java</b></a> </td>
+<td>4</td></tr>
+<tr class="a">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProviderTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProviderTest.java</b></a> </td>
+<td>4</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsCollections.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsCollections.java</b></a> </td>
 <td>4</td></tr>
@@ -207,16 +219,10 @@
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsPath.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsPath.java</b></a> </td>
 <td>3</td></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPath.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPath.java</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystem.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystem.java</b></a> </td>
 <td>3</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileEntry.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileEntry.java</b></a> </td>
-<td>3</td></tr>
-<tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProvider.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProvider.java</b></a> </td>
-<td>3</td></tr>
-<tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProviderTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProviderTest.java</b></a> </td>
 <td>3</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsAssertions.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsAssertions.java</b></a> </td>
@@ -268,12 +274,6 @@
 <td>2</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileChannel.java</b></a> </td>
-<td>2</td></tr>
-<tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystem.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystem.java</b></a> </td>
-<td>2</td></tr>
-<tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannel.java</b></a> </td>
 <td>2</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsPathTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsPathTest.java</b></a> </td>
@@ -333,28 +333,37 @@
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/.gitignore"><b>.gitignore</b></a> </td>
 <td>1</td></tr>
 <tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannelTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannelTest.java</b></a> </td>
+<td>1</td></tr>
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileEntryTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileEntryTest.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsAssertions.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsAssertions.java</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsDirectoryStream.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsDirectoryStream.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileStore.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileStore.java</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPathMatcher.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathMatcher.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/package-info.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>package-info.java</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsFileSystemsTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsFileSystemsTest.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsCollectionsTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsCollectionsTest.java</b></a> </td>
+<td>1</td></tr>
+<tr class="a">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsObject.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsObject.java</b></a> </td>
+<td>1</td></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPathUtil.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathUtil.java</b></a> </td>
 <td>1</td></tr></table></div></div>
                   </div>
             </div>
