--- a/findbugs.html
+++ b/findbugs.html
@@ -200,8 +200,8 @@
 <th>Errors</th>
 <th>Missing Classes</th></tr>
 <tr class="b">
-<td>16</td>
-<td>2</td>
+<td>18</td>
+<td>0</td>
 <td>0</td>
 <td>0</td></tr></table></div>
 <div class="section">
@@ -209,31 +209,7 @@
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Class</th>
-<th>Bugs</th></tr>
-<tr class="b">
-<td><a href="#de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel">de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel</a></td>
-<td>2</td></tr></table></div><a name="de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel"></a>
-<div class="section">
-<h3>de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel<a name="de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel"></a></h3>
-<table border="0" class="table table-striped">
-<tr class="a">
-<th>Bug</th>
-<th>Category</th>
-<th>Details</th>
-<th>Line</th>
-<th>Priority</th></tr>
-<tr class="b">
-<td>Increment of volatile field de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel.position in de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel.read(ByteBuffer)</td>
-<td>MT_CORRECTNESS</td>
-<td><a class="externalLink" href="http://findbugs.sourceforge.net/bugDescriptions.html#VO_VOLATILE_INCREMENT">VO_VOLATILE_INCREMENT</a></td>
-<td>59</td>
-<td>Medium</td></tr>
-<tr class="a">
-<td>Increment of volatile field de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel.position in de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel.write(ByteBuffer)</td>
-<td>MT_CORRECTNESS</td>
-<td><a class="externalLink" href="http://findbugs.sourceforge.net/bugDescriptions.html#VO_VOLATILE_INCREMENT">VO_VOLATILE_INCREMENT</a></td>
-<td>71</td>
-<td>Medium</td></tr></table></div>
+<th>Bugs</th></tr></table></div>
                   </div>
             </div>
           </div>
