--- a/jacoco/de.weltraumschaf.jvfs.impl/JvfsCollections.java.html
+++ b/jacoco/de.weltraumschaf.jvfs.impl/JvfsCollections.java.html
@@ -56,7 +56,7 @@ final class JvfsCollections {
     }
 
     public static &lt;T&gt; List&lt;T&gt; newArrayList(final List&lt;T&gt; original) {
-<span class="fc" id="L59">        return new ArrayList&lt;T&gt;(original);</span>
+<span class="nc" id="L59">        return new ArrayList&lt;T&gt;(original);</span>
     }
 
     /**
