--- a/jdepend-report.html
+++ b/jdepend-report.html
@@ -213,8 +213,8 @@
 <td>1</td></tr>
 <tr class="a">
 <td><a href="#de.weltraumschaf.jvfs.impl">de.weltraumschaf.jvfs.impl</a></td>
-<td>15</td>
-<td>15</td>
+<td>17</td>
+<td>17</td>
 <td>0</td>
 <td>1</td>
 <td>12</td>
@@ -270,7 +270,7 @@
 <th>Uses Packages</th></tr>
 <tr class="a">
 <td><i>None</i></td>
-<td>de.weltraumschaf.jvfs.impl.JvfsAssertions<br />de.weltraumschaf.jvfs.impl.JvfsCollections<br />de.weltraumschaf.jvfs.impl.JvfsDirectoryStream<br />de.weltraumschaf.jvfs.impl.JvfsFileAttributeView<br />de.weltraumschaf.jvfs.impl.JvfsFileAttributes<br />de.weltraumschaf.jvfs.impl.JvfsFileChannel<br />de.weltraumschaf.jvfs.impl.JvfsFileEntry<br />de.weltraumschaf.jvfs.impl.JvfsFileStore<br />de.weltraumschaf.jvfs.impl.JvfsFileSystem<br />de.weltraumschaf.jvfs.impl.JvfsFileSystem$1<br />de.weltraumschaf.jvfs.impl.JvfsFileSystemProvider<br />de.weltraumschaf.jvfs.impl.JvfsPath<br />de.weltraumschaf.jvfs.impl.JvfsPath$1<br />de.weltraumschaf.jvfs.impl.JvfsPathMatcher<br />de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel<br /></td>
+<td>de.weltraumschaf.jvfs.impl.JvfsAssertions<br />de.weltraumschaf.jvfs.impl.JvfsCollections<br />de.weltraumschaf.jvfs.impl.JvfsDirectoryStream<br />de.weltraumschaf.jvfs.impl.JvfsFileAttributeView<br />de.weltraumschaf.jvfs.impl.JvfsFileAttributes<br />de.weltraumschaf.jvfs.impl.JvfsFileChannel<br />de.weltraumschaf.jvfs.impl.JvfsFileEntry<br />de.weltraumschaf.jvfs.impl.JvfsFileStore<br />de.weltraumschaf.jvfs.impl.JvfsFileSystem<br />de.weltraumschaf.jvfs.impl.JvfsFileSystem$1<br />de.weltraumschaf.jvfs.impl.JvfsFileSystemProvider<br />de.weltraumschaf.jvfs.impl.JvfsObject<br />de.weltraumschaf.jvfs.impl.JvfsPath<br />de.weltraumschaf.jvfs.impl.JvfsPath$1<br />de.weltraumschaf.jvfs.impl.JvfsPathMatcher<br />de.weltraumschaf.jvfs.impl.JvfsPathUtil<br />de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel<br /></td>
 <td>de.weltraumschaf.jvfs<br /></td>
 <td>de.weltraumschaf.jvfs<br />java.io<br />java.lang<br />java.net<br />java.nio<br />java.nio.channels<br />java.nio.file<br />java.nio.file.attribute<br />java.nio.file.spi<br />java.util<br />java.util.concurrent<br />java.util.regex<br /></td></tr></table><a name="cycles"></a>
 <h2>Cycles<a name="Cycles"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><br />
