--- a/jacoco/de.weltraumschaf.jvfs.impl/JvfsFileSystem.java.html
+++ b/jacoco/de.weltraumschaf.jvfs.impl/JvfsFileSystem.java.html
@@ -328,7 +328,7 @@ import java.util.concurrent.TimeUnit;
     void createDirectory(final String path, final FileAttribute&lt;?&gt;... attrs) throws IOException {
 <span class="nc" id="L329">        checkClosed();</span>
 <span class="nc" id="L330">        assertFileExists(path);</span>
-<span class="nc" id="L331">        final List&lt;String&gt; names = JvfsPath.tokenize(path);</span>
+<span class="nc" id="L331">        final List&lt;String&gt; names = JvfsPathUtil.tokenize(path);</span>
 <span class="nc" id="L332">        names.remove(names.size() - 1);</span>
 <span class="nc" id="L333">        final StringBuilder buf = new StringBuilder();</span>
 
